--- a/App_Intro/views/App.xaml
+++ b/App_Intro/views/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="App_Intro.App"
+﻿<Application x:Class="App_Intro.views.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:App_Intro"
