--- a/App_Intro/views/DataColumn.xaml
+++ b/App_Intro/views/DataColumn.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="App_Intro.DataColumn"
+﻿<UserControl x:Class="App_Intro.views.DataColumn"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
