--- a/App_Intro/views/MainWindow.xaml
+++ b/App_Intro/views/MainWindow.xaml
@@ -4,18 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:App_Intro"
+        xmlns:model="clr-namespace:App_Intro.model"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Border BorderThickness="1" BorderBrush="Black" Margin="10" Padding="10" CornerRadius="5" VerticalAlignment="Center">
-            <ListBox ItemsSource="{Binding}" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionChanged="OnPokemonClicked">
+        <StackPanel VerticalAlignment="Top" Margin="10">
+            <TextBlock Text="All pokemons"/>
+            <ListBox Padding="5" Margin="0, 10" BorderBrush="LightGray" BorderThickness="0.5" ItemsSource="{Binding}"
+                     ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                     ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionChanged="OnPokemonClicked">
                 <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Path=Name.English}"></TextBlock>
+                    <DataTemplate DataType="{x:Type model:Pokemon}">
+                        <StackPanel Width="100">
+                            <Image Source="{Binding Sprite}"></Image>
+                            <TextBlock Text="{Binding Path=Name.English}" TextAlignment="Center"></TextBlock>
+                            <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="30" Margin="0,5,0,0">
+                                <Image Source="{Binding Path=TypesSprites[0]}" Height="15"/>
+                                <Image Source="{Binding Path=TypesSprites[1]}" Name="SecondType" Height="15"/>
+                            </WrapPanel>
+                        </StackPanel>
+                        <DataTemplate.Triggers>
+                            <Trigger SourceName="SecondType" Property="Source" Value="{x:Null}">
+                                <Setter TargetName="SecondType" Property="Visibility" Value="Hidden"></Setter>
+                            </Trigger>
+                        </DataTemplate.Triggers>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
                 <ListBox.ItemsPanel>
@@ -24,13 +36,6 @@
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
             </ListBox>
-        </Border>
-
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-
-
-            <Button Content="Show/Hide Text" Click="Click_ShowHide" Padding="5" />
-            <TextBlock x:Name="TextToShowHide" TextAlignment="Center" Margin="10">Some text</TextBlock>
         </StackPanel>
     </Grid>
 
