--- a/App_Intro/views/Details.xaml
+++ b/App_Intro/views/Details.xaml
@@ -21,16 +21,19 @@
             <Image Source="{Binding Path=Sprite}" Width="50" HorizontalAlignment="Left" />
 
             <StackPanel Margin="10">
+                
+                <views:OnePokemonDisplay Pokemon="{Binding}"  HorizontalAlignment="Center"/>
+                
                 <views:StatsDisplayer Stats="{Binding BaseStats}" />
 
                 <WrapPanel Margin="0,10" MinWidth="150">
                     <TextBlock Text="Type(s) : " Margin="0,0,10,0" />
-                    <ListBox ItemsSource="{Binding Types}" MaxWidth="300" HorizontalAlignment="Left"
+                    <ListBox ItemsSource="{Binding TypesSprite}" MaxWidth="300" HorizontalAlignment="Left"
                              BorderThickness="0"
                              Margin="0,-3">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding}" />
+                                <Image Source="{Binding}" />
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                         <ListBox.ItemsPanel>
