--- a/App_Intro/views/Details.xaml
+++ b/App_Intro/views/Details.xaml
@@ -18,14 +18,10 @@
                 </TextBlock.Text>
             </TextBlock>
 
-            <Image Source="{Binding Path=Sprite}" Width="50" HorizontalAlignment="Left" />
+            <views:OnePokemonLabel Pokemon="{Binding}" HorizontalAlignment="Left"/>
 
             <StackPanel Margin="10">
-                
-                <views:OnePokemonDisplay Pokemon="{Binding}"  HorizontalAlignment="Center"/>
-                
                 <views:StatsDisplayer Stats="{Binding BaseStats}" />
-
                 <WrapPanel Margin="0,10" MinWidth="150">
                     <TextBlock Text="Type(s) : " Margin="0,0,10,0" />
                     <ListBox ItemsSource="{Binding TypesSprite}" MaxWidth="300" HorizontalAlignment="Left"
@@ -44,7 +40,7 @@
                     </ListBox>
                 </WrapPanel>
 
-                <TextBlock Text="Get stats for : " Margin="0,10"></TextBlock>
+                <TextBlock Text="Get stats for : " Margin="0,10"/>
                 <WrapPanel>
                     <WrapPanel Margin="10,10">
                         <Label Content="Level"></Label>
